// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkButton /> should render a disabled link button 1`] = `
<BaseButton
  disabled={true}
  iconAlignment="left"
  id="test-link-button-disabled"
  render={[Function]}
  type="neutral"
>
  testing testing 123
</BaseButton>
`;

exports[`<LinkButton /> should render a link button with a simple text 1`] = `
<BaseButton
  disabled={false}
  iconAlignment="left"
  id="test-link-button-simple"
  render={[Function]}
  type="neutral"
>
  testing testing 123
</BaseButton>
`;

exports[`<LinkButton /> should render a link button with a size large 1`] = `
<BaseButton
  disabled={false}
  iconAlignment="left"
  id="test-link-button-large"
  render={[Function]}
  size="large"
  type="neutral"
>
  testing testing 123
</BaseButton>
`;

exports[`<LinkButton /> should render a link button with a type delete-subtle 1`] = `
<BaseButton
  disabled={false}
  iconAlignment="left"
  id="test-link-button-delete"
  render={[Function]}
  type="delete-subtle"
>
  testing testing 123
</BaseButton>
`;

exports[`<LinkButton /> should render a link button with an icon 1`] = `
<BaseButton
  disabled={false}
  href="test"
  icon={
    <FontAwesomeIcon
      type="star"
    />
  }
  iconAlignment="left"
  id="test-link-button-icon"
  render={[Function]}
  type="primary"
>
  Link Button with Icon
</BaseButton>
`;
